# discord-to-authentik

./: .env.dist  .gitignore  README.md  flake.nix  module.nix  package.nix  pyproject.toml
discord_to_authentik/: main.py  setup.py
